[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-tptp"
description = "Tptp grammar for tree-sitter"
version = "0.2.1"
keywords = ["incremental", "parsing", "tree-sitter", "tptp"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Alex Quin Averie Gabriel", email = "agabriel@4d6.de" }]
requires-python = ">=3.10"
license.text = "Apache 2.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/tree-sitter/tree-sitter-tptp"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
